# veritas

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
demos/reports/: demo1_shelf_boxes_report.json  demo2_robot_table_report.json  demo3_conveyor_physics_report.json  demo4_robot_pick_place_report.json  demo5_robot_conveyor_clash_report.json
scene/: render_demos.py
scene/usd/: demo1_shelf_boxes.usda  demo2_robot_table.usda  demo3_conveyor_physics.usda  demo4_robot_pick_place.usda  demo5_robot_conveyor_clash.usda
tests/: test_entropy.py  test_models.py  test_pipeline.py  test_prim_auditor.py  test_spatial_auditor.py
tests/fixtures/: minimal.usda
veritas/: __main__.py
veritas/cli/: main.py
veritas/core/: models.py  pipeline.py
veritas/impl/isaac/: isaac_renderer.py  isaac_sim_validator.py  mission_control_validator.py
veritas/impl/segmentation/: sam_segmentor.py
veritas/impl/usd/: prim_auditor.py  spatial_auditor.py
veritas/impl/vision/: claude_vision.py
veritas/interface/: renderer.py  segmentor.py  sim_validator.py  usd_auditor.py  vision_backend.py
veritas/scene_builder/: demo_scenes.py  factory_prims.py
