[project]
name = "veritas"
version = "0.1.0"
description = "USD ground-truth validation: audit, render, segment, vision cross-check"
requires-python = ">=3.10"
dependencies = ["pydantic>=2", "anthropic>=0.25"]

[project.scripts]
veritas = "veritas.cli.main:main"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
